initial working version of the app
